--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
 
 # dependencies
 /node_modules
@@ -34,3 +39,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Editor
+.idea
