--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +21,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint-react/eslint-plugin": "^1.9.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
