--- a/package.json
+++ b/package.json
@@ -1,43 +1,38 @@
 {
-  "name": "terminal-blog",
-  "version": "0.1.0",
+  "name": "dev-tools",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prepare": "simple-git-hooks"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "lodash-es": "^4.17.21",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "jotai": "^2.9.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.24.1",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@eslint-react/eslint-plugin": "^1.9.0",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^9.8.0",
+    "@eslint/js": "^9.9.0",
+    "@iconify/react": "^5.0.2",
+    "@iconify/types": "^2.0.0",
+    "@types/node": "^22.5.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "lint-staged": "^15.2.8",
-    "postcss": "^8",
-    "simple-git-hooks": "^2.11.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  },
-  "simple-git-hooks": {
-    "commit-msg": "pnpm commitlint --edit \"$1\"",
-    "pre-commit": "pnpm lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint . --fix"
+    "globals": "^15.9.0",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1"
   }
 }
