--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "18.x"
+          
+      - name: 安装pnpm
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          npm install pnpm -g
 
       - name: 安装依赖
         if: steps.cache.outputs.cache-hit != 'true'
