--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "test": "vitest",
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
@@ -31,13 +32,15 @@
     "postcss": "^8",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.0.5"
   },
   "simple-git-hooks": {
     "commit-msg": "pnpm commitlint --edit \"$1\"",
     "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
-    "*": "eslint . --fix"
+    "*": "eslint . --fix",
+    "*.test.*": "vitest related --run"
   }
 }
