--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,10 @@ jobs:
 
       - name: 打包项目
         run: npm run build
+
+      # 部署到 GitHub Pages
+      - name: 部署到github pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
